--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Sensor Kit</string>
+    <string name="str_home">Home</string>
+    <string name="str_light">Light</string>
+    <string name="str_environment">Environment</string>
+    <string name="str_movement">Movement</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
